<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailLanguageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16">

        <ImageView
            android:id="@+id/logo_detail"
            android:layout_width="@dimen/space_165"
            android:layout_height="@dimen/space_165"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/language_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/space_16"
            app:layout_constraintStart_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/language_name" />

        <TextView
            android:id="@+id/programming_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_4"
            android:textSize="@dimen/text_11"
            app:layout_constraintStart_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toBottomOf="@+id/language_name"
            android:text="@string/programming_language" />

        <TextView
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_8"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toBottomOf="@+id/programming_language"
            android:text="@string/language_release"/>

        <TextView
            android:id="@+id/language_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_4"
            app:layout_constraintStart_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toBottomOf="@+id/release"
            tools:text="@string/language_release" />

        <TextView
            android:id="@+id/designed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_8"
            app:layout_constraintStart_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toBottomOf="@+id/language_release"
            android:text="@string/language_designed"/>

        <TextView
            android:id="@+id/language_designed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_4"
            app:layout_constraintStart_toEndOf="@+id/logo_detail"
            app:layout_constraintTop_toBottomOf="@+id/designed_by"
            tools:text="@string/language_designed" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/space_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_detail"
            android:text="@string/language_developer"/>

        <TextView
            android:id="@+id/language_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:layout_marginTop="@dimen/space_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developer"
            tools:text="@string/language_developer" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/space_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_developer"
            android:text="@string/language_website" />

        <TextView
            android:id="@+id/language_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:layout_marginTop="@dimen/space_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"
            tools:text="@string/language_website" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/space_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_website"
            android:text="@string/language_description" />

        <TextView
            android:id="@+id/language_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:layout_marginTop="@dimen/space_4"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="@dimen/space_2"
            android:lineSpacingMultiplier="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:text="@string/language_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>